2013-02-23 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Use correct DBCVSReader init method.

2013-02-01 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Initialize qLoc to nil.

2013-02-01 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Load fields also of a deleted object.

2013-01-31 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Catch, cleanup and rethrow the exception

2013-01-29 Riccardo Mottola <rm@gnu.org>

	* DBCVSReader.m
	Remove debug statements.

2013-01-29 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Extract update result: success and errors.

2013-01-27 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Fix cast.

	* DBCVSWriter.m
	Specify explicit search option.

	* DBObjectInspector.m
	Fix warnings about unused stuff.

	* AppController.m
	Initialize log level if not set.

2013-01-12 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
	* English.lproj/ObjectInspector.nib
	Make cells selectable.

2013-01-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Handle case where no records are returned better.

2013-01-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Trap count() for zero size counts.

2013-01-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Count cycle end correctly.

2013-01-03 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* DBProgress.m
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	Update and Create progress.

2013-01-02 Riccardo Mottola <rm@gnu.org>

	* DBProgress.m
	Check for a valid maxVal

2012-12-29 Riccardo Mottola <rm@gnu.org>

	* DBProgress.m
	* DBProgress.h
	Time estimation.

2012-12-29 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Call progress reset before starting task.

2012-12-20 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Support for LIMIT in query identify, single-batch.

2012-12-13 Riccardo Mottola <rm@gnu.org>

	* DBProgressProtocol.h
	* DBProgress.h
	Remove setLogger from the protocol.

2012-12-11 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Settable timeout values for query and stnadard methods.
